# anomaly_detection_answers

./: LICENSE  README.md  STRING.py  requirements.txt  setup.cfg  setup.py
data_training/: anormal.csv  normal.csv  test.csv  train.csv  valid.csv
models/: ae.py  ert.py  inception_model.py  isolation_forest.py  neural_net.py  rae.py  residual_connection_model.py  vae.py
models/cluster_model/: cluster_analysis.py
models_configuration/: cfg.json
preprocessing/: customer_claims.py  ine.py  offers.py  rule_based.csv  sql_data.py  sql_to.py  train_test - copia.py  train_test.py
resources/: confussion_matrix.py  l21shrink.py  nif_corrector.py  process_utils.py  sampling.py  statistics.py
test/: experiment_1.py  results.py
