[metadata]
description-file = README.rst
name = 5Finder
version = attr: src.VERSION
description = Outlier based model on underwriting process
long_description = file: README.rst
keywords = outlier deep learning underwriting
license = BSD 3-Clause License
classifiers =
    Programming Language :: Python :: 3.6

[options]
zip_safe = False
include_package_data = True
packages = find:


[options.package_data]
* = *.txt, *.csv, *.md, *rst

[options.extras_require]
rest = pandas == 0.23.0, unidecode==1.0.22, scipy==1.1.0, numpy==1.14.5, scikit-learn==0.19.2, matplotlib==2.2.2, keras==2.2.2, tensorflow==1.10.0, scikitplot==0.3.7

